# Familien_Dashboard_Backend

./: .coverage  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  database.md  docker-compose.yml  entrypoint.sh  main.py  openapi.yml  pyproject.toml  run.py  security.md  userquestion.md
.github/workflows/: ci.yml
app/: __init__.py  extensions.py  routes.py
app/models/: __init__.py  chat.py  family.py  invite.py  role.py  timetable.py  todo.py  user.py  weather.py  widget.py
app/routes/: __init__.py
app/schemas/: __init__.py  family.py  timetable.py  todo.py  user.py  weather.py  widget.py
app/services/: __init__.py  calendar_service.py  family_service.py  role_service.py  user_service.py  weather_service.py  widget_service.py
app/utils/: __init__.py  decorators.py
app/widgets/: __init__.py  base.py  registry.py
docs/: sequence_diagram.mmd  workspace.dsl  workspace.json
migrations/versions/: 55b7002da431_add_family_invite_codes_table.py  5b87c5f48e75_create_users_table.py  686141490578_calendar.py  71512365238e_create_all_tables_users_roles_families_.py  a1b2c3d4e5f6_add_systemadmin_role.py  a9f3c2b1e4d7_user_widget_configs.py  b1c2d3e4f5a6_merge_heads.py  b72749c96ed6_add_chat_messages_table.py  c1d2e3f4a5b6_remove_systemadmin_role.py  c3f1a2b4d5e6_add_family_weather_configs_table.py  f4ce8a36362a_merge_all_heads.py  (+4 more)
tests/: conftest.py  test_admin_routes.py  test_family_routes.py  test_family_service.py  test_role_service.py  test_todo_service.py  test_user_service.py  test_weather_service.py  test_widget_service.py
(+46 files in other folders)
